# copa

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  config.h.in
.github/workflows/: codeql.yml
include/component/: ComponentController.h  ComponentControllerIf.h  ComponentIf.h
include/copa/component/: ComponentController.h
include/copa/factory/: FactoryIf.h
include/factory/: FactoryController.h  FactoryControllerIf.h  FactoryIf.h
include/mock/component/: ComponentController.h
include/mock/factory/: Factory.h
plugin/: libCodesys.so.0.0.0.4  libCodesys.so.0.0.0.5  libCodesys.so.0.0.0.6  libCodesys.so.0.0.0.7  libEcoStruxure.so.0.0.0.2  libEcoStruxure.so.0.0.0.3  libEcoStruxure.so.0.0.0.4  libEcoStruxure.so.0.0.0.6  libRuntime.so.0.0.0.4  libRuntime.so.0.0.0.6  libRuntime.so.0.0.0.7  libRuntime.so.0.0.0.8  libRuntime.so.0.0.0.9  libcodesys.so.0.0.0.10  libecostruxure.so.0.0.0.8  libruntime.so.0.0.0.11
plugins/: libCodesys.so.0.0.0.3  libRuntime.so.0.0.0.3
src/: Banner.cpp  Banner.h  main.cpp
src/component/: ComponentController.cpp
src/factory/: FactoryController.cpp
src/plugin/: Controller.cpp  Controller.h  Plugin.cpp  Plugin.h  PluginController.cpp  PluginController.h  PluginPluginController.cpp  PluginPluginController.h
test/: .cproject  .gitignore  .project  CMakeLists.txt
test/src/factory/: FactoryControllerTest.cpp
